# GitRoast

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mcp_server/: __init__.py  orchestrator.py  server.py
mcp_server/personality/: __init__.py  engine.py
mcp_server/tools/: __init__.py  code_analyzer.py  competitor_researcher.py  file_watcher.py  github_scraper.py  idea_debater.py  scaffolder.py  team_roaster.py  webhook_notifier.py
mcp_server/utils/: __init__.py  helpers.py
tests/: __init__.py  test_code_analyzer.py  test_competitor_researcher.py  test_file_watcher.py  test_github_scraper.py  test_idea_debater.py  test_personality.py  test_scaffolder.py  test_team_roaster.py  test_webhook_notifier.py
vscode_extension/: .vscodeignore  package-lock.json  package.json
vscode_extension/src/: chat_panel.ts  extension.ts  inline_comments.ts  sidebar.ts
